--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-  font-family: "Noto Sans JP", sans-serif;
+  font-family: 'Sahitya', serif;
   text-align: center;
   position: absolute;
 }
@@ -16,5 +16,5 @@ body {
   margin: 0 auto;
   outline: none;
   position: relative;
-  background: hsl(192, 69%, 60%);
+  background: purple;
 }
