🙆⛺️ Checkpoint ./index.html:18092373/4 ./style.css:18092373/807 ./script.js:18092373/531

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body {
   font-family: 'Jost', sans-serif;
   text-align: center;
+  font-weight: 300;
 }
 
 .container{
@@ -11,6 +12,7 @@ body {
 }
 
 .button{
+  font-weight: 500;
   user-select: none;
   cursor: pointer;
   border-radius: 6px;
@@ -22,15 +24,27 @@ body {
   position: relative;
 }
 
+.button:hover{
+  box-shadow: 0 0px 3px teal;
+}
+
 #user-upload {
   color: #FFFFFF;
-  background: linear-gradient(0deg, rgba(42,201,235,1) 0%, rgba(0,255,219,1) 100%);
-  
+  background: linear-gradient(0deg, rgba(42,201,235,1) 0%, rgba(32,233,205,1) 100%);
+}
+
+#user-upload:active {
+  background: linear-gradient(0deg, rgba(32,233,205,1) 0%, rgba(42,201,235,1) 100%);
 }
 
 #random-upload{
   color: #FFFFFF;
-  background: purple;
+  background: rgb(29,135,255);
+  background: linear-gradient(0deg, rgba(29,135,255,1) 0%, rgba(35,197,240,1) 100%);
+}
+
+#random-upload:active{
+  background: linear-gradient(0deg, rgba(35,197,240,1) 0%, rgba(29,135,255,1) 100%);
 }
 
 #canvas-div{
