--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
   font-family: "Jost", sans-serif;
   text-align: center;
   font-weight: 300;
+  color: #F5F5F5 ;
+  background: #434343;
 }
 
 h1, p{
