--- a/style.css
+++ b/style.css
@@ -104,9 +104,10 @@ p {
 }
 
 #canvas-div {
-  box-shadow: 0 0px 5px grey;
-  
+  box-shadow: 0 0px 5px #888;
+  margin: 10px 0px 10px 0px ;
   display: inline-block;
+  line-height: 0;
 }
 
 #error-display {
