🛤🌮 Checkpoint ./style.css:18092373/96 ./script.js:18092373/196

--- a/style.css
+++ b/style.css
@@ -104,13 +104,13 @@ p {
 }
 
 #canvas-div {
-  box-shadow: 0 0px 5px #888;
+  box-shadow: 0 0px 5px #838383;
   margin: 10px 0px 10px 0px ;
   display: inline-block;
   line-height: 0;
 }
 
 #error-display {
-  color: grey;
+  color: #AAAAAA;
   margin: 10px;
 }
