🚅⛸ Checkpoint ./README.md:18092373/16 ./style.css:18092373/12

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ a{
 }
 
 #canvas-div {
-  box-shadow: 0 0px 9px #EEEEEE;
+  box-shadow: 0 0px 9px #FFFFFF;
   margin: 10px 0px 10px 0px ;
   display: inline-block;
   line-height: 0;
