--- a/style.css
+++ b/style.css
@@ -46,37 +46,29 @@ a{
   margin: 3px;
   outline: none;
   position: relative;
+  color: #FFFFFF;
+    
 }
 
 .button:hover {
-  box-shadow: 0 0px 3px #CCCCCC;
+  box-shadow: 0 0px 4px #FFF;
 }
 
 #user-uploader {
-  color: #FFFFFF;
-  background: linear-gradient(
-    0deg,
-    rgba(42, 201, 235, 1) 0%,
-    rgba(32, 233, 205, 1) 100%
-  );
-}
+background: rgb(217,125,148);
+background: linear-gradient(0deg, rgba(217,125,148,1) 0%, rgba(237,159,159,1) 100%);}
 
 #user-uploader:active {
   background: linear-gradient(
     0deg,
     rgba(32, 233, 205, 1) 0%,
-    rgba(42, 201, 235, 1) 100%
+    rgba(217,125,148,1) 100%
   );
 }
 
 #random-link {
-  color: #FFFFFF;
-  background: rgb(29, 135, 255);
-  background: linear-gradient(
-    0deg,
-    rgba(29, 135, 255, 1) 0%,
-    rgba(35, 197, 240, 1) 100%
-  );
+background: rgb(173,129,203);
+background: linear-gradient(0deg, rgba(170,126,200,1) 0%, rgba(217,159,237,1) 100%);
 }
 
 #random-link:active {
@@ -88,13 +80,9 @@ a{
 }
 
 #save-painting {
-  color: #FFFFFF;
-  background: rgb(111, 43, 187);
-  background: linear-gradient(
-    0deg,
-    rgba(135, 54, 226, 1) 0%,
-    rgba(179, 138, 255, 1) 100%
-  );
+
+  background: rgb(109,92,184);
+background: linear-gradient(0deg, rgba(119,112,194,1) 0%, rgba(141,163,228,1) 100%);
 }
 
 #save-painting:active {
