--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ a {
   max-width: 250px;
 }
 
-#test {
-  padding: 20px;
-  margin: 0 auto;
+#instruct-container{
+  font-size: min(4vw, 16px);
+  width: 100%;
 }
