--- a/style.css
+++ b/style.css
@@ -1,129 +1,132 @@
-html {
-  height: 100%;
-  overflow: hidden;
+html{
+background: linear-gradient(
+  0deg,
+  rgba(34, 34, 34, 1) 0%,
+  rgba(89, 89, 89, 1) 100%
+);
+background-repeat: no-repeat;
+background-size: cover;
+height: 100%;
+}
+
+@media only screen and (max-device-width: 568px){
+  html{overflow: hidden;}
 }
 
 body {
-  background-attachment: fixed;
-  margin: 0;
-  font-family: "Jost", sans-serif;
-  text-align: center;
-  font-weight: 300;
-  color: #F5F5F5;
-  background: rgb(34, 34, 34);
-  background: linear-gradient(
-    0deg,
-    rgba(34, 34, 34, 1) 0%,
-    rgba(89, 89, 89, 1) 100%
-  );
-  background-repeat: no-repeat;
+margin: 0;
+font-family: "Jost", sans-serif;
+text-align: center;
+font-weight: 300;
+color: #F5F5F5;
+
 }
 
-h1, p {
-  margin: 0;
+p {
+margin: 0;
+font-size: min(4vw, 16px);
 }
 
 a {
-  color: rgba(237, 159, 159, 1);
+color: rgba(237, 159, 159, 1);
 }
 
 .container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 60%;
-  margin: 0 auto;
+display: flex;
+flex-direction: row;
+justify-content: center;
+width: 60%;
+margin: 0 auto;
 }
 
 .button {
-  font-weight: 500;
-  user-select: none;
-  cursor: pointer;
-  border-radius: 6px;
-  width: 9em;
-  top: -1vh;
-  padding: 3px;
-  margin: 3px;
-  outline: none;
-  position: relative;
-  color: #FFFFFF;
+font-weight: 500;
+user-select: none;
+cursor: pointer;
+border-radius: 6px;
+width: 9em;
+top: -1vh;
+padding: 3px;
+margin: 3px;
+outline: none;
+position: relative;
+color: #FFFFFF;
 }
 
 .button:hover {
-  box-shadow: 0 0px 4px #FFF;
+box-shadow: 0 0px 4px #FFF;
 }
 
 #user-uploader {
-  background: rgb(217, 125, 148);
-  background: linear-gradient(
-    0deg,
-    rgba(217, 125, 148, 1) 0%,
-    rgba(237, 159, 159, 1) 100%
-  );
+background: rgb(217, 125, 148);
+background: linear-gradient(
+  0deg,
+  rgba(217, 125, 148, 1) 0%,
+  rgba(237, 159, 159, 1) 100%
+);
 }
 
 #user-uploader:active {
-  background: linear-gradient(
-    0deg,
-    rgba(237, 159, 159, 1) 0%,
-    rgba(217, 125, 148, 1) 100%
-  );
+background: linear-gradient(
+  0deg,
+  rgba(237, 159, 159, 1) 0%,
+  rgba(217, 125, 148, 1) 100%
+);
 }
 
 #random-link {
-  background: rgb(173, 129, 203);
-  background: linear-gradient(
-    0deg,
-    rgba(170, 126, 200, 1) 0%,
-    rgba(217, 159, 237, 1) 100%
-  );
+background: rgb(173, 129, 203);
+background: linear-gradient(
+  0deg,
+  rgba(170, 126, 200, 1) 0%,
+  rgba(217, 159, 237, 1) 100%
+);
 }
 
 #random-link:active {
-  background: linear-gradient(
-    0deg,
-    rgba(217, 159, 237, 1) 0%,
-    rgba(170, 126, 200, 1) 100%
-  );
+background: linear-gradient(
+  0deg,
+  rgba(217, 159, 237, 1) 0%,
+  rgba(170, 126, 200, 1) 100%
+);
 }
 
 #save-painting {
-  background: rgb(109, 92, 184);
-  background: linear-gradient(
-    0deg,
-    rgba(119, 112, 194, 1) 0%,
-    rgba(141, 163, 228, 1) 100%
-  );
+background: rgb(109, 92, 184);
+background: linear-gradient(
+  0deg,
+  rgba(119, 112, 194, 1) 0%,
+  rgba(141, 163, 228, 1) 100%
+);
 }
 
 #save-painting:active {
-  background: rgba(135, 54, 226, 1);
-  background: linear-gradient(
-    0deg,
-    rgba(141, 163, 228, 1) 0%,
-    rgba(119, 112, 194, 1) 100%
-  );
+background: rgba(135, 54, 226, 1);
+background: linear-gradient(
+  0deg,
+  rgba(141, 163, 228, 1) 0%,
+  rgba(119, 112, 194, 1) 100%
+);
 }
 
 #canvas-div {
-  box-shadow: 0 0px 9px #FFFFFF;
-  margin: 5px 0px 0px 0px;
-  display: inline-block;
-  line-height: 0;
+box-shadow: 0 0px 9px #FFFFFF;
+margin: 5px 0px 0px 0px;
+display: inline-block;
+line-height: 0;
 }
 
 #error-display {
-  color: #AAAAAA;
-  margin: 10px;
+color: #AAAAAA;
+margin: 10px;
 }
 
 #slider {
-  margin: 15px 0 0 0;
-  width: 60%;
-  max-width: 250px;
+margin: 15px 0 0 0;
+width: 60%;
+max-width: 250px;
 }
 
 #instruct-container{
-  font-size: min(4vw, 16px);
-  width: 100%;
+width: 100%;
 }
