--- a/style.css
+++ b/style.css
@@ -153,23 +153,71 @@ a {
   box-shadow: 0 0px 6px #ffffffbb;
 }
 
-ul{
-  text-align: left;
+h3{
+  text-align: center;
+  margin:0;
+}
+
+hr{
+  border:0;
+  width:100%;
+  height:1px;
+  background:rgb(134, 134, 134);
 }
 
 .modal{
-  background: linear-gradient(
-    0deg,
-    rgb(75, 75, 75) 0%,
-    rgb(49, 49, 49) 100%
-  );
+  display: none;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
   position: fixed;
+  top: 0;
+  left: 0;
   z-index: 1;
-  border-radius: 10px;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.493);
+  justify-content: center;
+}
+
+ul{
+  margin: 15px 10px 20px 0;
 }
 
 .modal-content{
-  margin: 0 auto;
-  padding: 3vw;
+  margin: 25vh auto;
+  padding: 20px;
+  text-align: left;
+  background: linear-gradient(
+    0deg,
+    rgb(49, 49, 49) 0%,
+     rgb(75, 75, 75) 100%
+  );
+  border-radius: 10px;
+  max-width: min(300px, 60vw);
+  max-height: 40vh;
+  font-size: min(16px, 3vw);
+}
+
+.close{
+  margin:0;
+  width: 1.3em;
+  height: 1.3em;
+  border-radius: 50%;
+  user-select: none;
+  cursor: pointer;
+  text-align: center;
+  line-height: 1em;
+  float: right;
+  font-weight: bold;
+}
+
+.close:hover{
+  background: rgba(31, 31, 31, 0.425);
+  box-shadow: none;
+}
+
+#modal-footer{
+  text-align:center; 
+  font-size: min(14px, 3vw); 
+  color:rgb(168, 168, 168);
 }
